# todo-platform

./: .gitignore  404.html  CNAME  LICENSE  README.md  index.html  release.sh  sitemap.xml
.github/workflows/: argocd-update.yaml  dagu.yaml  deploy-service.yaml  deployment.yaml  docs-local-k8s.yaml  docs.yaml  homer.yaml  image-build.yaml  notify-slack.yaml  release.yaml  reusable-docker-build.yaml  runner.yaml  slack-notification-deployment.yaml  slack-notification.yaml  todo-api-swagger.yaml  todo-api.yaml  todo-bot.yaml  todo-mcp-swagger.yaml  todo-mcp.yaml  update-runner.yaml
api/: todo-api.html  todo-mcp.html
api/todo-api/: index.html
api/todo-mcp/: index.html
apps/todops-cli/: .env.example  .gitignore  README.md  pyproject.toml
apps/todops-cli/tests/: conftest.py
apps/todops-cli/tests/integration/: test_foo.py
apps/todops-cli/tests/unit/loki/: test_client.py
apps/todops-cli/todops/: __init__.py  cli.py  loki_commands.py  loki_ignore_commands.py  slack_commands.py
apps/todops-cli/todops.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
apps/todops-cli/todops/loki/: client.py  config.py  helpers.py  ignore_manager.py
apps/todops-cli/todops/slack/: client.py
architecture/adr/: index.html
architecture/c4/: index.html
architecture/hr/: index.html
architecture/overview/: index.html
bootstrap/: .gitignore  helmfile.yaml
bootstrap/argocd/: .gitignore  app-of-apps-infra.yaml  app-of-apps-todo.yaml  argocd-ingress.yaml  argocd-ssh-config.yaml.example  values.yaml
deploy/: .gitignore
docs/: Dockerfile  MCP_TELEMETRY_GUIDE.md  TELEMETRY.md  TRACING.md  generate-api-docs.sh  mkdocs.yml  nginx.conf  requirements.txt
k6/: Makefile  README.md  todo-api-load-test.js  todo-mcp-load-test.js
search/: search_index.json
(+276 files in other folders)
