[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "todops"
version = "0.1.0"
description = "A minimal CLI for todo platform operations"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
]

[project.scripts]
todops = "todops.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
]
